# web-presence

.github/workflows/: build-event-service.yml  docker-image.yml
event-service/: Cargo.toml  Dockerfile
event-service/src/: main.rs  state.rs
event-service/src/adapter/: mod.rs
event-service/src/adapter/axum/: mod.rs
event-service/src/adapter/memory/: mod.rs
event-service/src/application/: mod.rs
event-service/src/port/driven/: mod.rs
event-service/src/port/driver/: mod.rs
web-frontend/: Cargo.toml
web-frontend/src/: main.rs
web-frontend/src/components/: mod.rs
