[package]
name = "frontend"
version = "0.1.0"
authors = ["ERIK_WITTEMEIER <erik.wittemeier@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false, features = ["router"] }
dioxus-icons = { version = "0.1.0", default-features = false }
dioxus = { version = "0.7.1", features = [] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
